--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
             <h1 class="section-title autoDisplay">My Projects 👨‍💻</h1>
             <div class="project-card">
                 <div class="project-vidbox autoBlur" >
-                    <video loop id="projectVideo1" src="videos/project1.mp4"></video>
+                    <video loop muted id="projectVideo1" src="videos/project4.mp4"></video>
                     <div class="hover-sign"></div>
                 </div>
                 <div class="project-info fadein-left">
-                    <h1>Animated <span class="gradient">Gaming</span> Website</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta ipsam excepturi ex in corrupti similique dolor nam, suscipit, odio soluta at recusandae nulla, id fugiat!</p>
+                    <h1>AI <span class="gradient">Car Auction</span> Platform</h1>
+<p>Advanced web platform that predicts auction car prices using artificial intelligence models and real-time data analysis. Currently under development and being refined for launch.</p>
                     <button><i class='bx bx-link-external' ></i> Website</button>
             </div>
             </div>
