finaliser le form contact

--- a/index.html
+++ b/index.html
@@ -226,6 +226,8 @@
 
                     <button type="submit">Send Message <i class='bx bx-mail-send'></i></button>
                 </form>
+
+                <p class="contact-status" role="status" aria-live="polite"></p>
             </div>
         
         </section> 
