added github link

--- a/index.html
+++ b/index.html
@@ -194,12 +194,42 @@
             <h1 class="section-title autoDisplay">Let's talk😊</h1>
 
             <div class="social-box autoBlur">
-                <a href="#"><i class='bx bxl-telegram' ></i> Contact Example.com</a>
-                <a href="#"><i class='bx bxl-linkedin-square' ></i> Contact Example.com</a>
+                <div class="social-box-header">
+                    <p class="social-kicker">Direct Contact</p>
+                    <h3>Reach Out Anytime</h3>
+                </div>
+
+                <a class="social-link-row" href="https://github.com/Tarik-AI-IOT" target="_blank" rel="noopener noreferrer">
+                    <span class="social-link-icon"><i class='bx bxl-github'></i></span>
+                    <span class="social-link-copy">
+                        <strong>GitHub</strong>
+                        <small>github.com/Tarik-AI-IOT</small>
+                    </span>
+                    <i class='bx bx-right-arrow-alt social-link-arrow'></i>
+                </a>
+
+                <a class="social-link-row" href="#">
+                    <span class="social-link-icon"><i class='bx bxl-telegram'></i></span>
+                    <span class="social-link-copy">
+                        <strong>Telegram</strong>
+                        <small>Available for projects</small>
+                    </span>
+                    <i class='bx bx-right-arrow-alt social-link-arrow'></i>
+                </a>
+
+                <a class="social-link-row" href="#">
+                    <span class="social-link-icon"><i class='bx bxl-linkedin-square'></i></span>
+                    <span class="social-link-copy">
+                        <strong>LinkedIn</strong>
+                        <small>Connect for opportunities</small>
+                    </span>
+                    <i class='bx bx-right-arrow-alt social-link-arrow'></i>
+                </a>
+
                 <div class="social-icons">
                     <a href="#"><i class='bx bxl-youtube' ></i></a>
                     <a href="#"><i class='bx bxl-twitter' ></i></a>
-                    <a href="#"><i class='bx bxl-facebook-circle' ></i></a>
+                    <a href="https://github.com/Tarik-AI-IOT" target="_blank" rel="noopener noreferrer"><i class='bx bxl-github'></i></a>
                 </div>
             </div>
 
