icon on browser

--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Tarik Antar">
+    <!-- <link rel="canonical" href="https://tarikantar.com/"> -->
     <meta name="description" content="Tarik Antar is a Full-Stack & Mobile Developer based in Montreal, Canada, specializing in AI, IoT, React, Node.js, Supabase, MongoDB and MySQL ,AWS, and scalable web applications.">
     <title>Tarik Antar | Full-Stack Developer | AI • IoT • Cloud</title>
+    
+    <link rel="icon" type="image/png" sizes="64x64" href="images/Logo2.png">
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -251,7 +255,7 @@
 
                     <label class="field-group field-message">
                         <span>Your Message</span>
-                        <textarea class="input-message" name="message" placeholder="Share your thoughts..."></textarea>
+                        <textarea class="input-message" name="message" placeholder="Share your thoughts..." required></textarea>
                     </label>
 
                     <button type="submit">Send Message <i class='bx bx-mail-send'></i></button>
