added link to naviguation mobile

--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
             
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">Projects</a></li>
+                <li><a href="#aboutSection">About</a></li>
+                <li><a href="#myskills">Skills</a></li>
+                <li><a href="#myproject">Projects</a></li>
             </ul>
 
             <div class="social-sidebar">
                 <a><i class='bx bxl-youtube'></i></a>
-                <a><i class='bx bxl-github'></i></a>
+                <a><i class='bx bxl-github' onclick="window.open('https://github.com/Tarik-AI-IOT','_blank')"></i></a>
                 <a><i class='bx bxl-linkedin-square'></i></a>
             </div>
         </div>
